--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Hello World</h1>
     <h2>Second time</h2>
+    <h3>Third time</h3>
     <script src="js/script.js"></script>
 </body>
 </html>
