--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <h1>Hello World</h1>
     <h2>Second time</h2>
     <h3>Third time</h3>
+    <h4>Hi there</h4>
     <script src="js/script.js"></script>
 </body>
 </html>
